# llama-gui1

./: .gitignore  APPLY_INSTRUCTIONS.md  ARCHITECTURE.md  BACKUP_INFO.txt  CHANGES_SUMMARY.md  CMakeLists.txt  EMBEDDING_OPTIMIZATION_GUIDE.md  IMPROVEMENTS_PLAN.md  INDEX.md  INTEGRATION_NOTES.md  OPTIMIZATION_SUMMARY.md  QUICK_START_RAG_OPTIMIZATION.md  RAG_LOCAL_ФИКС.md  README_OPENROUTER_IMPROVEMENTS.md  START_HERE.md  UNIVERSAL_OPENAI_GUIDE.md  agents_config.json  build.sh  clone-clean.sh  llama_gui_debug_info.txt  openrouter_rag_plan.md  push-clean.sh  run_gui.sh  settings.ini  version.json.in
.github/workflows/: squash-history.yml
.qwen/: settings.json  settings.json.orig
.qwen/agents/: project-planner.md
backups/configs/: settings_backup_20260323_212413.ini
docs/: AGENT_API.md  AGENT_COMMANDS.md  AGENT_PLUGIN_GUIDE.md  AGENT_SYSTEM_OVERVIEW.md  AGENT_UI_INTEGRATION.md  AGENT_USER_GUIDE.md  BACKUP_README.md  BACKUP_SYSTEM.md  CHAT_TEMPLATE_MANAGER.md  CONFIG_SYSTEM.md  DEVELOPMENT.md  KV_CACHE_RECOMMENDATIONS.md  LLAMA_BENCH_README.md  VERSIONING.md  grid_snapping_ru.md  llama_bench_integration_plan.md
i18n/: en.json  ru.json
include/: imgui.h  llama-gui.h
include/agents/: agent_capabilities.h  agent_config.h  agent_context.h  agent_logger.h  agent_registry.h  agent_request.h  agent_result.h  agent_types.h  agents.h  i_agent.h  plugin_c_api.h  plugin_loader.h  sandbox.h  security_manager.h
include/bench/: bench_common.h  bench_types.h  llama_bench_module.h  llama_bench_parser.h  llama_bench_results.h  llama_bench_runner.h  profile_adapter.h
include/core/: chat_cache_manager.h  chat_template_manager.h  config_manager.h  document_parser.h  embedding_generator.h  env_file_handler.h  file_dialog_filters.h  ini_parser.h  kilocode_client.h  kilocode_types.h  kv_cache_api.h  kv_cache_metrics.h  kv_cache_settings.h  kv_cache_slot_manager.h  kv_cache_storage.h  kv_cache_types.h  llama_interface.h  llama_interface_impl.h  logger.h  model_manager.h  model_performance_stats.h  openrouter_client.h  openrouter_types.h  rag_index_profile.h  rag_manager.h  rag_settings.h  server_manager.h  settings.h  settings_batch.h  settings_cache.h  settings_control_vector.h  settings_gpu.h  settings_grammar.h  settings_model_loading.h  settings_output.h  settings_rope.h  settings_sampling.h  settings_serialization_advanced.h  settings_server_runtime.h  settings_tensor_override.h  (+8 more)
include/ui/: advanced_menu_system.h  advanced_settings_dialog.h  agent_chat_integration.h  agent_commands.h  agent_panel.h  agent_status_widget.h  backup_manager_dialog.h  chat_interface.h  cloud_services_dialog.h  command.h  command_base.h  command_manager.h  commands_file.h  commands_help.h  commands_settings.h  commands_workspace.h  conversation_manager.h  dialog_manager.h  embedding_settings_dialog.h  file_browser.h  file_dialog_helper.h  file_manager.h  font_awesome_icons.h  grid_snapping_dialog.h  grid_snapping_system.h  language_selector.h  llama_bench_dialog.h  localization_manager.h  main_window.h  openrouter_models_dialog.h  profile_manager_dialog.h  quick_settings_dialog.h  rag_interface.h  rag_settings_dialog.h  recent_files_manager.h  settings_dialog.h  settings_dialog_advanced.h  settings_dialog_batch.h  settings_dialog_context.h  settings_dialog_gpu.h  (+11 more)
patches/: map_model_selection_patch.cpp  mapreduce_timeout_patch.cpp  openrouter_client_improvements.cpp  rag_manager_fallback_methods.cpp  rag_manager_header_patch.h  reduce_model_selection_patch.cpp  reduce_timeout_patch.cpp
plugins/: CMakeLists.txt  plugin.schema.json
plugins/examples/hello_agent/: CMakeLists.txt  README.md  hello_agent.cpp
plugins/examples/template_agent/: CMakeLists.txt  README.md  plugin.json.example  template_agent.cpp  template_agent.h
plugins/official/: CMakeLists.txt
plugins/official/code_agent/: CMakeLists.txt  code_agent.cpp  code_agent.h
plugins/official/file_agent/: CMakeLists.txt  file_agent.cpp  file_agent.h
plugins/official/rag_agent/: CMakeLists.txt  plugin.json  rag_agent.cpp  rag_agent.h
plugins/official/summarization_agent/: CMakeLists.txt  summarization_agent.cpp  summarization_agent.h
plugins/official/terminal_agent/: CMakeLists.txt  terminal_agent.cpp  terminal_agent.h
plugins/official/web_search_agent/: CMakeLists.txt  web_search_agent.cpp  web_search_agent.h
scripts/: backup.sh
src/: main.cpp
src/agents/: agent_config.cpp  agent_context.cpp  agent_logger.cpp  agent_registry.cpp  plugin_loader.cpp  sandbox.cpp  security_manager.cpp
src/bench/: llama_bench_module.cpp  llama_bench_parser.cpp  llama_bench_results.cpp  llama_bench_runner.cpp  profile_adapter.cpp
src/core/: chat_cache_manager.cpp  chat_template_manager.cpp  config_manager.cpp  document_parser.cpp  embedding_generator.cpp  env_file_handler.cpp  file_dialog_filters.cpp  kilocode_client.cpp  kv_cache_api_impl.cpp  kv_cache_metrics.cpp  kv_cache_settings.cpp  kv_cache_slot_manager.cpp  kv_cache_storage.cpp  llama_interface_async.cpp  llama_interface_http.cpp  llama_interface_main.cpp  llama_interface_orig.cpp  llama_interface_streaming.cpp  llama_interface_utils.cpp  model_manager.cpp  model_performance_stats.cpp  openrouter_client.cpp  rag_index_profile.cpp  rag_manager_cache.cpp  rag_manager_core.cpp  rag_manager_deep_analysis.cpp  rag_manager_documents.cpp  rag_manager_embedding.cpp  rag_manager_hybrid.cpp  rag_manager_model_selection.cpp  rag_manager_persistence.cpp  rag_manager_search.cpp  rag_manager_utils.cpp  server_manager_builders_model_gpu_batch.cpp  server_manager_builders_sampling_cache_rope.cpp  server_manager_builders_server_security.cpp  server_manager_core.cpp  server_manager_utils.cpp  settings_accessors.cpp  settings_core.cpp  (+14 more)
src/ui/: advanced_menu_system_core.cpp  advanced_menu_system_factories.cpp  advanced_menu_system_rendering.cpp  advanced_menu_system_workspace.cpp  advanced_settings_dialog.cpp  agent_chat_integration.cpp  agent_commands.cpp  agent_panel.cpp  agent_status_widget.cpp  backup_manager_dialog.cpp  chat_input_filter.cpp  chat_interface_input.cpp  chat_interface_main.cpp  (+66 more)
(+6 files in other folders)
